--- a/q6-scenarios/presentation.tex
+++ b/q6-scenarios/presentation.tex
@@ -24,17 +24,26 @@
 \usetikzlibrary{mindmap,backgrounds,positioning}
 
 \graphicspath{{figs/}}
+
 \setbeamercolor{refToContribCol}{bg=hriSec1Comp,fg=white}
+\setbeamercolor{highlightCol}{bg=hriSec3,fg=white}
+
 \newcommand{\refToContrib}[1]{%
     \begin{beamercolorbox}[wd=\linewidth,ht=2ex,dp=0.7ex]{refToContribCol}%
     \hspace{0.5em}$\hookrightarrow$ #1%
     \end{beamercolorbox}%
 }%
 
+\newcommand{\highlight}[1]{%
+    \begin{beamercolorbox}[wd=\linewidth,dp=0.7ex]{highlightCol}%
+    #1%
+    \end{beamercolorbox}%
+}%
+
 %--------------------------------------------------------------------------
 % General presentation settings
 %--------------------------------------------------------------------------
-\title{Social Interaction Scenarios}
+\title{Soc. Interaction Scenarios}
 \subtitle{Q6 -- Can you devise a social interaction scenario that current
 cognitive architectures would likely fail, and why?}
 \date{}
@@ -49,485 +58,149 @@ cognitive architectures would likely fail, and why?}
 %\setbeameroption{show notes on second screen}
 
 \begin{document}
-%--------------------------------------------------------------------------
-% Titlepage
-%--------------------------------------------------------------------------
 
 \maketitle
 
-%\imageframe[Children playing with\\the Ranger robot]{photo-fullscreen.jpg}
-%\imageframe{photo-fullscreen.jpg}
+\begin{frame}{Why?}
+    Why would we want to work out scenarios?
 
-\begin{frame}{Cognitive Architecture?}
-\centering
-        \resizebox{!}{0.7\paperheight}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-        
-
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/5}, 
-                level 2 concept/.append style={sibling angle=120}, 
-            concept color=hriWarmGreyLight,text=hriWarmGreyDark]
-            node[concept] {Cognition}
-            [clockwise from=-30]
-            child[concept color=hriSec1,text=white] { node[concept] (percept) {Perception}
-                [clockwise from=40]
-                child[concept color=hriSec2Dark,text=white] { node[concept]{Attention} }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] (dialog) {Communication} }
-            }
-            child[concept color=hriSec2Comp,text=white] { node[concept] (krr) {Knowledge Representation} 
-                [clockwise from=-30]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] (memory) {Memory} }
-                child[concept color=hriSec3CompDark,text=white] { node[concept] (tom) {Theory of Mind} }
-            }
-            child[concept color=hriSec2,text=white] { node[concept] (action) {Action Execution} 
-                [counterclockwise from=110]
-                child[concept color=hriSec3,text=white] { node[concept] (plan) {Task Planning} }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] (comm) {Communication} }
-            }
-            child[concept color=hriSec3Comp,text=white] { node[concept] (learning) {Learning} 
-                [counterclockwise from=130]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] (adapt) {Adaptation} }
-            }
-            child[concept color=hriSec3CompDark,text=white] { node[concept] (reason) {Reasoning} 
-                [clockwise from=110]
-                child[concept color=hriSec3Dark,text=white] { node[concept] {Problem solving} }
-                child[concept color=hriSec1Dark,text=white] { node[concept] (decision) {Decision making} } 
-            };
-
-        \onslide<2>{
-        \path (decision) edge[->, bend left] (action);
-        \path (percept) edge[->, bend left] (action);
-        \path (krr) edge[<->, bend right] (reason);
-        \path (plan) edge[<->] (reason);
-        \path (percept) edge[->, bend left] (krr);
-        \path (krr) edge[->, bend left] (plan);
-        \path (learning) edge[->, bend left] (reason);
-        \path (learning) edge[->, bend left] (krr);
-        \path (percept) edge[<->, bend left] (learning);
-        \path (dialog) edge[->, bend left] (tom);
-        \path (tom) edge[->, bend left] (comm);
-        \path (percept) edge[<->, bend left] (memory);
-        }
-
-
-        \end{tikzpicture}
-    }
-\end{frame}
-
-\begin{frame}{}
-
-    \centering
-
-    \begin{exampleblock}{Cognitive Architectures Building $\neq$ Science of Integration}
-        The function may be a {\Medium byproduct} of the architecture
-    \end{exampleblock}
-    \vspace{2em}
-    \uncover<2>{
-        At this stage, we should not commit to any architecture,\\nor internal mechanism
-    }
-
-
-\end{frame}
-
-
-\begin{frame}{No commitments to internal mechanisms}
-    \centering
-        \resizebox{!}{0.7\paperheight}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-        
-         \onslide<1>{
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/5}, 
-                level 2 concept/.append style={sibling angle=120}, 
-            concept color=hriWarmGreyLight,text=hriWarmGreyDark]
-            node[concept color=white] {}
-            [clockwise from=-30]
-            child[concept color=hriSec1,text=white] { node[concept] (percept) {Perception}
-                [clockwise from=40]
-                child[concept color=hriSec2Dark,text=white] { node[concept]{Attention}; }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] (dialog) {Communication} ;};
-            }
-            child[concept color=hriSec2Comp,text=white] { node[concept] (krr) {Knowledge Representation} 
-                [clockwise from=-30]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] (memory) {Memory}; }
-                child[concept color=hriSec3CompDark,text=white] { node[concept] (tom) {Theory of Mind}; };
-            }
-            child[concept color=hriSec2,text=white] { node[concept] (action) {Action Execution} 
-                [counterclockwise from=110]
-                child[concept color=hriSec3,text=white] { node[concept] (plan) {Task Planning}; }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] (comm) {Communication}; };
-            }
-            child[concept color=hriSec3Comp,text=white] { node[concept] (learning) {Learning} 
-                [counterclockwise from=130]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] (adapt) {Adaptation}; };
-            }
-            child[concept color=hriSec3CompDark,text=white] { node[concept] (reason) {Reasoning} 
-                [clockwise from=110]
-                child[concept color=hriSec3Dark,text=white] { node[concept] {Problem solving};}
-                child[concept color=hriSec1Dark,text=white] { node[concept] (decision) {Decision making}; } ;
-            };
-        }
-         \onslide<2>{
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/5}, 
-                level 2 concept/.append style={sibling angle=120}, 
-            concept color=hriWarmGreyLight,text=hriWarmGreyDark]
-            node[concept color=white] {}
-            [clockwise from=-30]
-            child[concept color=hriSec1,text=white] { node[concept] (percept) {Perception}
-                [clockwise from=40]
-                child[concept color=hriSec2Dark,text=white] { node[concept]{Attention}; }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] (dialog) {Communication} ;};
-            }
-            child[concept color=white,text=gray] { node[concept] (krr) {Knowledge Representation} 
-                [clockwise from=-30]
-                child[concept color=white,text=gray] { node[concept] (memory) {Memory}; }
-                child[concept color=hriSec3CompDark,text=white] { node[concept] (tom) {Theory of Mind}; };
-            }
-            child[concept color=hriSec2,text=white] { node[concept] (action) {Action Execution} 
-                [counterclockwise from=110]
-                child[concept color=white,text=gray] { node[concept] (plan) {Task Planning}; }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] (comm) {Communication}; };
-            }
-            child[concept color=white,text=gray] { node[concept] (learning) {Learning} 
-                [counterclockwise from=130]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] (adapt) {Adaptation}; };
-            }
-            child[concept color=white,text=gray] { node[concept] (reason) {Reasoning} 
-                [clockwise from=110]
-                child[concept color=white,text=gray] { node[concept] {Problem solving};}
-                child[concept color=white,text=gray] { node[concept] (decision) {Decision making}; } ;
-            };
-        }
-
-        \end{tikzpicture}
-    }
-
-
-\end{frame}
-
-\begin{frame}{}
-
-    \centering
-
-    \begin{exampleblock}{Cognitive Architectures Building $\neq$ Science of Integration}
-        The function may be a {\Medium byproduct} of the architecture
-    \end{exampleblock}
-    \vspace{2em}
-    What are the {\Medium surface} cognitive competencies\\required by {\Medium social interaction}?
-
-
-\end{frame}
-
-
-
-\begin{frame}{Functions for Social Cognition}
-\centering
-        \resizebox{!}{0.7\paperheight}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-        
-
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/6}, 
-                level 2 concept/.append style={sibling angle=60}, 
-            concept color=hriWarmGreyLight,text=hriWarmGreyDark]
-            node[concept] {Social\\Cognition in HRI}
-            [clockwise from=30]
-            child[concept color=hriSec1,text=white] { node[concept] (percept) {Perception of Human's State}
-                [clockwise from=120]
-                child[concept color=hriSec3Dark,text=white] { node[concept]{Emotions} }
-                child[concept color=hriSec2Dark,text=white] { node[concept]{Attention} }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] {Inference of mental models} }
-            }
-            child[concept color=hriSec2Comp,text=white,grow=-30] { node[concept] (knowledge) {Social Knowledge} 
-                [counterclockwise from=-120]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] {Social rules} }
-                child[concept color=hriSec3Comp,text=black] { node[concept] {Social context} }
-                child[concept color=hriSec3CompDark,text=white] { node[concept] {Common-sense} }
-            }
-            child[concept color=hriSec3Comp,text=black, grow=-120] { node[concept] (comm) {Communication} 
-                [counterclockwise from=180]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] {Verbal} }
-                child[concept color=hriSec1Dark,text=white] { node[concept] {Non-verbal} }
-            }
-            child[concept color=hriSec3,text=white,grow=180] { node[concept] (dynamics) {Interaction Dynamics} 
-                [clockwise from=180]
-                child[concept color=hriSec2Dark,text=white] { node[concept] {Long-term interaction} }
-            }
-            child[concept color=hriSec2,text=black, grow=120] { node[concept] (action) {Human-aware actions} 
-                [counterclockwise from=120]
-                child[concept color=hriSec2CompDark,text=white] { node[concept] {Action, behaviour recognition} }
-                child[concept color=hriSec3,text=white] { node[concept] {Joint actions} }
-            };
-
-
-        \end{tikzpicture}
-    }
-%    \\
-%    Learn -- Memorize -- Reason -- Represent -- Assess Situation
-\end{frame}
-
-
-\begin{frame}{Perception of human's cognitive state}
-
-    \begin{multicols}{2}
-        \resizebox{0.7\columnwidth}{!}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/6}, 
-                level 2 concept/.append style={sibling angle=60}, 
-            concept color=hriSec1,text=white]
-            node[concept] {Perception of Human's State}
-                [clockwise from=60]
-                child[concept color=hriSec3Dark,text=white] { node[concept]{Emotions} }
-                child[concept color=hriSec2Dark,text=white] { node[concept]{Attention} }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] {Inference of mental models}};
-
-
-        \end{tikzpicture}
-    }
-    \vfill
-    \columnbreak
-
-    {\Medium Emotions}
-
-    Recognition {\tiny \Medium facial, non-verbal acoustic, verbal features / sentient analysis}\\
-    Interpretation {\tiny \Medium empathy,...}
-
-    {\Medium Attention}
-
-    Visual attention\\
-    Joint attention
-
-    {\Medium Mental Modelling}
-
-    User modelling\\
-    (perceptual) theory of mind~\cite{lemaignan2015mutual}
-
-    \refToContrib{Alexis' contribution}
-
-    \end{multicols}
-\end{frame}
-
-\begin{frame}{Social Knowledge}
-
-    \begin{multicols}{2}
-        \resizebox{0.7\columnwidth}{!}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/6}, 
-                level 2 concept/.append style={sibling angle=60}, 
-            concept color=hriSec2Comp,text=white]
-            node[concept] (knowledge) {Social Knowledge} 
-                [counterclockwise from=-60]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] {Social rules} }
-                child[concept color=hriSec3Comp,text=black] { node[concept] {Social context} }
-                child[concept color=hriSec3CompDark,text=white] { node[concept] {Common-sense}};
-
-
-        \end{tikzpicture}
-    }
-    \vfill
-    \columnbreak
-
-    {\Medium Common-sense}
-
-    Hand-coded ontologies\\
-    Automated web-scrapping~\cite{tenorth2010understanding}
-
-    {\Medium Social context}
-
-    ?
-
-    {\Medium Social Rules}
-
-    Proxemics\\
-    Social norms\\
-    Moral norms\\
-    \refToContrib{Vasanth's contribution}
-    Ethics
-
-
-    \end{multicols}
-\end{frame}
-
-\begin{frame}{Communication}
-
-    \begin{multicols}{2}
-        \resizebox{0.7\columnwidth}{!}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/6}, 
-                level 2 concept/.append style={sibling angle=60}, 
-            concept color=hriSec3Comp,text=black]
-            node[concept] (comm) {Communication} 
-                [counterclockwise from=-30]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] {Verbal} }
-                child[concept color=hriSec1Dark,text=white] { node[concept] {Non-verbal} };
-
-        \end{tikzpicture}
-    }
-    \vfill
-    \columnbreak
-
-
-    Review~\cite{mavridis2015review}:
     \begin{itemize}
-        \item Breaking the ``simple commands only'' barrier;
-        \item Mixed initiative dialogue;
-        \item Symbol grounding problem;
-        \item Motor correlates
-        \item ...
+        \item {\Medium evidence the need} for (socio-)cognitive architectures
+        \item build up a research agenda
+        \item assess the progress
     \end{itemize}
 
-
-    {\Medium Non-verbal}
-
-    Behavioural alignment
-
-    {\Medium Verbal}
-
-    Situated dialogue~\cite{kruijff2010situated}
-
-    \end{multicols}
-
-\end{frame}
-
-\begin{frame}{Interaction Dynamics}
-
-    \begin{multicols}{2}
-        \resizebox{0.7\columnwidth}{!}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/6}, 
-                level 2 concept/.append style={sibling angle=60}, 
-            concept color=hriSec3,text=white]
-            node[concept] (dynamics) {Interaction Dynamics} 
-                [clockwise from=0]
-                child[concept color=hriSec2Dark,text=white] { node[concept] {Long-term interaction} };
-
-        \end{tikzpicture}
+    \only<2>{
+    As it turns out, it is rather hard to come up with compelling interaction
+    scenarios...
     }
-    \vfill
-    \columnbreak
-
-
-
-
-    Behavioural alignment
-
-    {\Medium Long-term interaction}
-
-    Situated dialogue~\cite{kruijff2010situated}
-
-    \end{multicols}
 
 \end{frame}
 
+\begin{frame}{Why?}
 
-\begin{frame}{Human-aware actions}
+    Less far-reaching:
+    \vspace{1em}
 
-    \begin{multicols}{2}
-        \resizebox{0.7\columnwidth}{!}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/6}, 
-                level 2 concept/.append style={sibling angle=60}, 
-            concept color=hriSec2,text=black]
-            node[concept] (action) {Human-aware actions} 
-                [counterclockwise from=-30]
-                child[concept color=hriSec2CompDark,text=white] { node[concept] {Action, behaviour recognition} }
-                child[concept color=hriSec3,text=white] { node[concept] {Joint actions} };
-        \end{tikzpicture}
-    }
-    \vfill
-    \columnbreak
-
-
-
-
-    {\Medium Action \& Behaviour recognition}
-
-    {\Medium Joint action}
-
-
-    \end{multicols}
+    \highlight{\centering An interaction scenario to {\Medium push (and break!)} our current architectures, and
+    {\Medium inform} us on the choice of computational models}
 
 \end{frame}
 
-\begin{frame}{Discussion directions}
+\begin{frame}{}
+
+    The promise of socio-cognitive architectures is to enable our
+    robots to {\Medium deal with complex (multi-modal, 4D), human-like, partially unpredictable
+    situations}.
     
+    \vspace{2em}
+
+    \uncover<2>{
+        We want to challenge that :-)
+    }
+
+\end{frame}
+
+
+\begin{frame}{scenario -- task -- benchmark}
+
+{\Medium scenario? task? benchmark?}
+
+\begin{itemize}
+    \item<2-> {\Medium toy scenarios}: do not say much on real interactions
+    \item<3-> {\Medium ``in the wild''}: rich, but hard to replicate (neither
+        locally nor in other labs)
+    \item<4-> {\Medium ``unit-tasks''} (benchmarks): risk of developing/tuning a system for
+        a single purpose -- contradict the mere idea of cognitive architectures
+    \item<5-> The scenario {\Medium tells a story}: it projects into an
+        usage. The resulting ``cognitive noise'' may or may not be desirable.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Framing}
+    The (set of) tasks must be {\Medium carefully framed}:\\
+
+    They should {\Medium only necessitate the cognitive skills that they
+    attempt to evidence}.
+
+\end{frame}
+
+\begin{frame}{Desirable meta-features}
 
     \begin{itemize}
-        \item Is listing functional requirements the right approach?\\ {\Medium surface competencies $\Rightarrow$ frame issue?}
-        \item What are the missing ones for social interaction?\\ {\Medium imitation, self-awareness,...?}
-        \item Functions interdependencies? Functional entanglement?
-        \item Reference tasks? Metrics? Benchmarks? At what level are they useful? (single function? group of functions? whole architecture only?)
+        \item easy to reproduce in different locations (location, culture
+            agnostic)
+        \item grounded in the literature (socio-cognitive psychology, developmental
+            psychology, neurosciences, etc.)
+        \item should exhibit all the features of a good experimental protocol,
+            including a clear baseline (typically a human baseline)
+        \item hard enough to be challenging!
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{A few examples}
+    \begin{itemize}
+        \item<1-> RobotCup@Home -- shopping mall
+        \item<2-> TUM's James \& Rosie cooking
+        \item<3-> KeJia's waiter robot
+        \item<4-> The ``Theory of Mind'' Task Zoo
     \end{itemize}
 
-    40 minutes of open discussion, plus:
-    \refToContrib{Vasanth's presentation (15 min)}
-    \refToContrib{Alexis' presentation (15 min)}
+    \centering
+    \only<1>{
+        \video{0.7\linewidth}{videos/Robocup@Home.mp4?start=241}
+    }
+    \only<2>{
+        \video{0.7\linewidth}{videos/JamesAndRosie.mp4?start=55}
+    }
+    \only<3>{
+        \video{0.7\linewidth}{videos/KejiaRobot.mov?start=70}
+    }\end{frame}
 
+\begin{frame}{Open questions}
+
+    \begin{itemize}
+        \item Should we build an experimental agenda for robotic social cognition?
+        \item What is the ideal ``cognitive breadth'' for a good scenario? (how many
+            different cognitive skills are required?)
+        \item What are these scenarios!!?
+    \end{itemize}
 \end{frame}
 
-
-\begin{frame}{Bibliography}
-\begin{thebibliography}{10}
-
-    \beamertemplatearticlebibitems
-    \bibitem{lemaignan2015mutual}
-    S. Lemaignan, P. Dillenbourg
-    \newblock \doublequoted{Mutual Modelling: Inspiration for the Next Steps}
-    \newblock 2015
-
-    \beamertemplatearticlebibitems
-    \bibitem{tenorth2010understanding}
-    M. Tenorth, D. Nyga, M. Beetz
-    \newblock \doublequoted{Understanding and Executing Instructions for Everyday Manipulation Tasks
-    from the World Wide Web}
-    \newblock 2010
-
-    \beamertemplatearticlebibitems
-    \bibitem{mavridis2015review}
-    N. Mavridis
-    \newblock \doublequoted{A review of verbal and non-verbal human–robot interactive communication}
-    \newblock 2015
-
-
-
-    \beamertemplatearticlebibitems
-    \bibitem{kruijff2010situated}
-    G.-J. M. Kruijff \emph{et al.}
-    \newblock \doublequoted{Situated dialogue processing for human-robot interaction}
-    \newblock 2010
-
-
-
-  \end{thebibliography}
-\end{frame}
+%\begin{frame}{Bibliography}
+%\begin{thebibliography}{10}
+%
+%    \beamertemplatearticlebibitems
+%    \bibitem{lemaignan2015mutual}
+%    S. Lemaignan, P. Dillenbourg
+%    \newblock \doublequoted{Mutual Modelling: Inspiration for the Next Steps}
+%    \newblock 2015
+%
+%    \beamertemplatearticlebibitems
+%    \bibitem{tenorth2010understanding}
+%    M. Tenorth, D. Nyga, M. Beetz
+%    \newblock \doublequoted{Understanding and Executing Instructions for Everyday Manipulation Tasks
+%    from the World Wide Web}
+%    \newblock 2010
+%
+%    \beamertemplatearticlebibitems
+%    \bibitem{mavridis2015review}
+%    N. Mavridis
+%    \newblock \doublequoted{A review of verbal and non-verbal human–robot interactive communication}
+%    \newblock 2015
+%
+%
+%
+%    \beamertemplatearticlebibitems
+%    \bibitem{kruijff2010situated}
+%    G.-J. M. Kruijff \emph{et al.}
+%    \newblock \doublequoted{Situated dialogue processing for human-robot interaction}
+%    \newblock 2010
+%
+%
+%
+%  \end{thebibliography}
+%\end{frame}
 
 \end{document}
 
