Q6: added the 'ToM Zoo' figure

--- a/q6-scenarios/presentation.tex
+++ b/q6-scenarios/presentation.tex
@@ -72,8 +72,8 @@ cognitive architectures would likely fail, and why?}
     \end{itemize}
 
     \uncover<2>{
-    And, as it turns out, it is rather hard to come up with compelling interaction
-    scenarios...
+        And, as it turns out, it is rather hard to come up with compelling interaction
+        scenarios...
     }
 
 \end{frame}
@@ -84,7 +84,7 @@ cognitive architectures would likely fail, and why?}
     \vspace{1em}
 
     \highlight{\centering Interaction scenarios to {\Medium push (and break!)
-        our current architectures}, and {\Medium inform} us on the choice of computational models}
+    our current architectures}, and {\Medium inform} us on the choice of computational models}
 
 \end{frame}
 
@@ -93,7 +93,7 @@ cognitive architectures would likely fail, and why?}
     The promise of socio-cognitive architectures is to enable our
     robots to {\Medium deal with complex (multi-modal, 4D), human-like, partially unpredictable
     situations}.
-    
+
     \vspace{2em}
 
     \uncover<2>{
@@ -105,17 +105,17 @@ cognitive architectures would likely fail, and why?}
 
 \begin{frame}{}
 
-{\Medium scenario? task? benchmark?}
+    {\Medium scenario? task? benchmark?}
 
-\begin{itemize}
-    \item<2-> {\Medium toy scenarios}: do not say much about real interactions
-    \item<3-> {\Medium ``in the wild''}: rich \& certainly necessary, but also hard to replicate (either
-        locally or in other labs) and time consuming
-    \item<4-> {\Medium ``unit-tasks''} (benchmarks): risk of developing/tuning a system for
-        a single purpose -- contradict the mere idea of cognitive architectures
-    \item<5-> The scenario {\Medium tells a story}: it projects into an
-        usage\\ $\Rightarrow$ resulting ``cognitive noise'' may or may not be desirable
-\end{itemize}
+    \begin{itemize}
+        \item<2-> {\Medium toy scenarios}: do not say much about real interactions
+        \item<3-> {\Medium ``in the wild''}: rich \& certainly necessary, but also hard to replicate (either
+            locally or in other labs) and time consuming
+        \item<4-> {\Medium ``unit-tasks''} (benchmarks): risk of developing/tuning a system for
+            a single purpose -- contradict the mere idea of cognitive architectures
+        \item<5-> The scenario {\Medium tells a story}: it projects into an
+            usage\\ $\Rightarrow$ resulting ``cognitive noise'' may or may not be desirable
+    \end{itemize}
 \end{frame}
 
 
@@ -141,64 +141,64 @@ cognitive architectures would likely fail, and why?}
 \end{frame}
 
 \begin{frame}{Check-list for a good interaction scenario}
-\scriptsize
+    \scriptsize
     \begin{multicols}{2}
 
-    {\Medium Nature of the task}\\
-    $\square$ requires social interaction\\
-    $\square$ mirrors/models natural interactions\\
-    $\square$ tests more than one cognitive function\\
+        {\Medium Nature of the task}\\
+        $\square$ requires social interaction\\
+        $\square$ mirrors/models natural interactions\\
+        $\square$ tests more than one cognitive function\\
 
 
-    {\Medium Experimental protocol}\\
-    $\square$ based on existing, published protocol\\
-    Which one: \line(1,0){80}\\
-    $\square$ well framed: actual cognitive requirements match what is tested\\
-    $\square$ has clear experimental conditions\\
-    $\square$ has a meaningful baseline\\
+        {\Medium Experimental protocol}\\
+        $\square$ based on existing, published protocol\\
+        Which one: \line(1,0){80}\\
+        $\square$ well framed: actual cognitive requirements match what is tested\\
+        $\square$ has clear experimental conditions\\
+        $\square$ has a meaningful baseline\\
 
-    {\Medium Reproducibility}\\
-    $\square$ meaningful for a range of robots\\
-    $\square$ does not require an overspecific participant population\\
-    $\square$ readily reproducible task environment\\
+        {\Medium Reproducibility}\\
+        $\square$ meaningful for a range of robots\\
+        $\square$ does not require an overspecific participant population\\
+        $\square$ readily reproducible task environment\\
 
-    {\Medium Impact}\\
-    $\square$ is socially relevant\\
-    $\square$ the intend of the task can be explained in one sentence\\
-    $\square$ it is beyond the state-of-art\\
+        {\Medium Impact}\\
+        $\square$ is socially relevant\\
+        $\square$ the intend of the task can be explained in one sentence\\
+        $\square$ it is beyond the state-of-art\\
 
-    {\Medium Required socio-cognitive functions}
+        {\Medium Required socio-cognitive functions}
 
-    \begin{multicols}{2}
-    $\square$ Perception\\
-    {\tiny
-    \hspace*{0.4cm}$\square$ emotions\\
-    \hspace*{0.4cm}$\square$ attention\\
-    \hspace*{0.4cm}$\square$ mentalization\\
-    }
-    $\square$ Social knowledge\\
-    {\tiny
-    \hspace*{0.4cm}$\square$ common-sense\\
-    \hspace*{0.4cm}$\square$ social ctxt\\
-    \hspace*{0.4cm}$\square$ social rules\\
-    }
-    \vfill
-    \columnbreak
-    $\square$ Communication\\
-    {\tiny
-    \hspace*{0.4cm}$\square$ verbal\\
-    \hspace*{0.4cm}$\square$ non-verbal\\
-    }
-    $\square$ Dynamics\\
-    {\tiny
-    \hspace*{0.2cm}$\square$ long-term interaction\\
-    }
-    $\square$ Actions\\
-    {\tiny
-    \hspace*{0.4cm}$\square$ action recognition\\
-    \hspace*{0.4cm}$\square$ joint actions\\
-    }
-    \end{multicols}
+        \begin{multicols}{2}
+            $\square$ Perception\\
+            {\tiny
+                \hspace*{0.4cm}$\square$ emotions\\
+                \hspace*{0.4cm}$\square$ attention\\
+                \hspace*{0.4cm}$\square$ mentalization\\
+            }
+            $\square$ Social knowledge\\
+            {\tiny
+                \hspace*{0.4cm}$\square$ common-sense\\
+                \hspace*{0.4cm}$\square$ social ctxt\\
+                \hspace*{0.4cm}$\square$ social rules\\
+            }
+            \vfill
+            \columnbreak
+            $\square$ Communication\\
+            {\tiny
+                \hspace*{0.4cm}$\square$ verbal\\
+                \hspace*{0.4cm}$\square$ non-verbal\\
+            }
+            $\square$ Dynamics\\
+            {\tiny
+                \hspace*{0.2cm}$\square$ long-term interaction\\
+            }
+            $\square$ Actions\\
+            {\tiny
+                \hspace*{0.4cm}$\square$ action recognition\\
+                \hspace*{0.4cm}$\square$ joint actions\\
+            }
+        \end{multicols}
 
 
 
@@ -209,12 +209,15 @@ cognitive architectures would likely fail, and why?}
 
 
 \begin{frame}{A few examples}
+    \small
+    \begin{multicols}{2}
     \begin{itemize}
-        \item<1-> RobotCup@Home -- shopping mall
-        \item<2-> TUM's James \& Rosie cooking
+        \item<1-> RobotCup@Home (shopping)
+        \item<2-> TUM's James \& Rosie cooking \vfill\columnbreak
         \item<3-> KeJia's waiter robot
         \item<4-> The ``Theory of Mind'' Task Zoo
     \end{itemize}
+    \end{multicols}
 
     \centering
     \only<1>{
@@ -225,9 +228,13 @@ cognitive architectures would likely fail, and why?}
     }
     \only<3>{
         \video{0.7\linewidth}{videos/KejiaRobot.mov?start=70}
-    }\end{frame}
+    }
+    \uncover<4>{
+            \includegraphics[width=0.7\linewidth]{zoo}
+    }
+\end{frame}
 
-\begin{frame}{Open questions}
+\begin{frame}{Discussion directions}
 
     \begin{itemize}
         \item Should we build an experimental agenda for robotic social cognition?
@@ -235,6 +242,11 @@ cognitive architectures would likely fail, and why?}
             different cognitive skills are required?)
         \item What are these scenarios!?
     \end{itemize}
+
+    35 minutes of open discussion, plus:
+    \refToContrib{Vasanth's presentation (15 min)}
+    \refToContrib{Alexis' presentation (15 min)}
+
 \end{frame}
 
 %\begin{frame}{Bibliography}
