Added overview of symbolic arch

--- a/q4-fundamental-computational-structures/presentation.tex
+++ b/q4-fundamental-computational-structures/presentation.tex
@@ -53,6 +53,91 @@ symbolic, sub-symbolic, hybrid, ...)?}
 
 \maketitle
 
+%{
+%\paper{Lemaignan et al., {\Medium Towards Grounding Human-Robot Interaction}, 2012}
+
+\begin{frame}{Symbolic architectures}
+
+\resizebox{\paperwidth}{!}{%
+
+\tikzset{subpart/.style={draw, font=\scriptsize, fill opacity=0.5, text opacity=1, fill=white!50}}
+
+\begin{tikzpicture}[
+    >=latex,
+    every edge/.style={draw, very thick},
+    skill/.style={draw, rounded corners, align=center, inner sep=5pt, fill=black!20},
+    label/.style={midway, align=center, font=\scriptsize, fill=white}]
+
+  %%% ORO
+    \node at (0,0)[skill, ultra thick, fill=hriSec2Dark!50] (oro) {{\Medium Knowledge
+    base}\\ (typically, a symbolic blackboard)};
+  
+  %%% HATP
+    \node at (-6, 2.5)[skill, fill=hriSec1!50] (hatp) {{\Medium Task planner}\\(hopefully
+    human-aware)};
+  
+  %%% DIALOGS
+    \node at (-6, -3) [skill, fill=hriSec3Dark!50] (dialogs) {{\Medium Multi-modal
+    communication}\\NLP, back-channel,...};
+
+  %%% SPARK
+  \node at (4,-3.5)[skill, fill=hriSec3!50] (spark) {%
+      \begin{tikzpicture}
+          \node at (0,0) (geom) {{\Medium Situation Assessment} -- geometric \& temporal reasoning};
+        \node [subpart, below=0.2 of geom.south west, anchor=north west] (world-update) {Sensors fusion};
+        \node [subpart, right=0.2 of world-update] (geom-model) {Geometric model of the environment};
+        \node [subpart, right=0.2 of geom-model] (fact-prod) {Symbolic facts production};
+      \end{tikzpicture}
+    };
+
+  %%% MHP
+    \node at (9,0)[skill, fill=hriSec3CompDark!50] (mhp) {Motion and manipulation \\ planning};
+
+  %%% SHARY
+  \node at (4,4.5)[skill, fill=hriSec1Comp!50] (shary) {%
+      \begin{tikzpicture}
+        \node at (0,0) (exec) {Execution Controller};
+        \node [subpart, below=0.2 of exec.south west, anchor=north west] (plans) {Goal \& Plans \\ management};
+        \node [subpart, right=0.2 of plans] (sit-asses) {Situation assessment \\ and context management};
+        \node [subpart, right=0.2 of sit-asses] {Action instantiation, \\ execution and monitoring};
+      \end{tikzpicture}
+    };
+
+
+  %%% LOWLEVEL
+  \node [skill, below=0.7 of spark] (lowlevel) {%
+      \begin{tikzpicture}
+        \node at (0,0) (sensori) {Sensorimotor layer};
+        %\node [subpart, below=0.2 of sensori.south west, anchor=north west, align=left] (perception) {{\bf Perception} \\ 2D markers, RGB-D, motion capture};
+        %\node [subpart, align=right, right=0.2 of perception] {{\bf Actuation} \\ Head's pan-tilt unit, grippers, arms, wheels};
+      \end{tikzpicture}
+  };
+
+  %%% Separation between deliberative layer and sensori-motor layer
+  \draw[dotted, thick] (-8,-5) -- (12, -5);
+
+  %%% Relations between components
+  \path (shary.340) edge [<->, bend left] node[label] {motion plan \\ requests} (mhp);
+  \path (shary.west) edge [<->, bend right] node[label] {shared \\ plans} (hatp);
+  \path (hatp) edge [<->, bend right] node[label] {world model and \\ agents beliefs} (oro.170);
+  \path (dialogs) edge [<->, bend left] node[label] {natural language \\ grounding} (oro.190);
+  \path (spark.100) edge [->, bend right] node[label] {symbolic \\ facts} (oro);
+  \path (spark.5) edge [->, bend right] node[label] {environment\\model} (mhp);
+  \path (shary) edge [<->, bend left] node[label] {events, \\ world model and \\ agents beliefs} (oro);
+  \path (shary) edge [<->, bend left] node[label] {action monitoring \\ and management of \\ position hypotheses} (spark);
+  \path (lowlevel) edge [->] (spark);
+  \path (lowlevel.east) edge [<-, bend right=80, looseness=1.5] node[label] {atomic\\actions} (shary.east);
+
+\end{tikzpicture}
+}
+\scriptsize Taken from \cite{lemaignan2012towards}
+\end{frame}
+%}
+
+%{
+%    \paper{Morse et al., {\Medium Epigenetic Robotics Architecture}, 2010] ---
+%    [Baxter et al., {\Medium Cognitive Architecture for HRI:\ldots}, 2013}
+
 \begin{frame}{Sub-symbolic architectures}
 
     \begin{itemize}
@@ -148,7 +233,7 @@ symbolic, sub-symbolic, hybrid, ...)?}
     }
 
 \end{frame}
-
+%}
 
 \begin{frame}{Cross-disciplinary ``Impedance Matching''}
 
@@ -183,6 +268,12 @@ symbolic, sub-symbolic, hybrid, ...)?}
 
 \begin{frame}{Bibliography}
 \begin{thebibliography}{10}
+
+    \beamertemplatearticlebibitems
+    \bibitem{lemaignan2012towards}
+    S. Lemaignan, R. Alami, A. K. Pandey, M. Warnier, J. Guitton
+    \newblock \doublequoted{Towards Grounding Human-Robot Interaction}
+    \newblock 2012
 
     \beamertemplatearticlebibitems
     \bibitem{morse2010epigenetic}
