Q4: added a picture of ERA expe
While here, updated beamer template for better full image rendering

--- a/q4-fundamental-computational-structures/presentation.tex
+++ b/q4-fundamental-computational-structures/presentation.tex
@@ -282,7 +282,8 @@ symbolic, sub-symbolic, hybrid, ...)?}
     }
 
 \end{frame}
-%}
+
+\imageframe[black]{}{era}
 
 \begin{frame}{Cross-disciplinary ``Impedance Matching''}
 
