--- a/common/style/beamerthemehri.sty
+++ b/common/style/beamerthemehri.sty
@@ -374,23 +374,35 @@
 
 \newcommand\fullbackground[1]{%
 \setbeamertemplate{background}{
-    \includegraphics[width=\paperwidth, height=\paperheight]{#1}
+    \includegraphics[width=\paperwidth, height=\paperheight,keepaspectratio]{#1}
 }
 }
 
-\newcommand\imageframe[2][]{%
+\newcommand\imageframe[3][]{%
     {
     \setbeamertemplate{background canvas}{
-        \includegraphics[width=\paperwidth,height=\paperheight]{#2}
+        \ifstrempty{#1}{ 
+            \colorlet{bgcolor}{white}%
+        }{
+            \colorlet{bgcolor}{#1}%
+        }
+        \begin{tikzpicture}[remember picture, overlay,background
+            rectangle/.style={fill=bgcolor}, show background rectangle]
+            \useasboundingbox (current page.north east) rectangle (current page.south west);
+
+            \node at (current page.center) {\includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio]{#3}};
+        \end{tikzpicture}
+
     }
     \setbeamertemplate{background}{}
+
     \begin{frame}[plain]
-        \ifstrempty{#1}{ 
+        \ifstrempty{#2}{ 
             % #1 is empty
         }{
             \begin{tikzpicture}[remember picture,overlay]
                 \node at (-1, -4.5) [anchor=south west,shape=rectangle,fill=hriSec3Dark, opacity=0.7, align=right, text width=0.6\paperwidth]
-                {\usebeamerfont{subtitle}\usebeamercolor[bg]{subtitle}#1\par};
+                {\usebeamerfont{subtitle}\usebeamercolor[bg]{subtitle}#2\par};
             \end{tikzpicture}
         }
     \end{frame}
